# testsweeper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GNUmakefile  INSTALL.md  INSTALL.txt  Jenkinsfile  Makefile  README.md  configure.py  example.cc  example.hh  libtest.cc  libtest.hh  libtestConfig.cmake.in  make.inc.gcc  test.cc  test.hh  testsweeper.cc  testsweeper.hh  testsweeperConfig.cmake.in  version.cc
.github/workflows/: build.sh  configure.sh  main.yml  setup_env.sh  test.sh
config/: ansicodes.py  compiler_cxx.cc  config.py
include/: testsweeper.hh
lib/pkgconfig/: testsweeper.pc.in
test/: CMakeLists.txt  ref-000.txt  ref-001.txt  ref-002.txt  ref-003.txt  ref-004.txt  ref-005.txt  ref-006.txt  ref-100.txt  ref-101.txt  ref-200.txt  ref-201.txt  ref-202.txt  ref-203.txt  ref-300.txt  ref-301.txt  ref-302.txt  ref-303.txt  ref-400.txt  ref-401.txt  ref-402.txt  ref-403.txt  ref-404.txt  ref-500.txt  ref-501.txt  ref-502.txt  ref-503.txt  run_tests.py  test.cc  test.hh  test_sort.cc
test/ref/: 003.txt  004.txt  005.txt  006.txt  007.txt  100.txt  101.txt  200.txt  201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  300.txt  301.txt  302.txt  303.txt  400.txt  401.txt  402.txt  403.txt  404.txt  500.txt  501.txt  502.txt  503.txt  600.txt  601.txt  602.txt  603.txt  604.txt  605.txt  606.txt
tools/: copyright.py  make_release.py  release.py
